# ghibli

./: .gitignore  CMakeLists.txt
src/app/: CMakeLists.txt  main.c
